--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 .mynavbar{
-    background-color: #9492a8;
+    background-color: darkslategray;
     box-sizing: border-box;
     font-family: sans-serif;
     -webkit-text-size-adjust: 100%;
