update css property

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .transition-3{
-    trasition-duration: 0.3s;
+    transition-duration: 0.3s;
     transition-timing-function: ease;
     transition-delay: 0s;
     transition-property: all;
